--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     <img src="./images/music_flatline.svg" alt="Girl listening music"
     width="450"
     height="220">
-    <div class="wrapper-container-inner">     <h1 class="wrapper-title">Order Summary</h1>
-     <p class="wrapper-text">You can now listen to millions of songs, 
+    <div class="wrapper-container__inner">     <h1 class="wrapper-container__h1">Order Summary</h1>
+     <p class="wrapper-container_paragragh">You can now listen to millions of songs, 
       audiobooks, and podcasts on any device anywhere you like!</p>
-  <div class="wrapper-annual-plan">
-    <div class="wrapper-annual-icon">
+  <div class="wrapper-container__plan">
+    <div class="wrapper-container__icon">
       <img src="./images/music-icon.svg" alt="Music icon"
       width="18"
       height="18">
     </div>
 
-    <div class="wrapper-annual-price">
-      <p class="wrapper-annual-price-title">Annual Plan</p>
-      <p class="wrapper-annual-price-info">$59.99/year</p>
+    <div class="wrapper-container__price">
+      <p class="wrapper-container__price-tittle">Annual Plan</p>
+      <p class="wrapper-conatiner__price-info">$59.99/year</p>
     </div>
 
-    <a class="wrapper-annual-link" href="#">Change</a>
+    <a class="wrapper-conatiner__link" href="#">Change</a>
 
   </div>
 
-  <div class="wrapper-container-btn-wrapper">
-    <a class="wrapper-container-payment-btn" href="#">Proceed to Payment </a>
-    <a class="wrapper-container-cancel-btn" href="#">Cancel Orders</a>
+  <div class="wrapper-container__btn-wrapper">
+    <a class="wrapper-container__payment-btn" href="#">Proceed to Payment </a>
+    <a class="wrapper-container__cancel-btn" href="#">Cancel Orders</a>
   </div>
     </div>
     </div>
